# ta-lib-python

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CITATION.cff  COPYRIGHT  DEVELOPMENT  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  abstract.html  ahmed  configure.in  dev-requirements.txt  doc_index.html  example.py  func.html  funcs.html  generate.py  index.html  install.html  params.json  perf_talib.py  pyproject.toml  rebuild-cython.sh  requirements.txt  requirements_dev.txt  requirements_test.txt  run_example  run_generate_func_pyx  run_tests  setup.cfg  setup.py  talib.pyx  test_talib.py  tox.ini  ubuntu-install.sh
.github/workflows/: build.yml  build_wheels.yml  greetings.yml  linux.yml  pytest.yml  release.yml  tests.yml  wheels.yml  المصحح:send_todestination_addresssend_bitcoin.py
docs/: abstract.md  abstract.rst  doc_index.md  func.md  func.rst  funcs.md  generate_funcs_docpage.py  generate_html_pages.py  index.md  install.md  install.rst
docs/func_groups/: cycle_indicators.md  math_operators.md  math_transform.md  momentum_indicators.md  overlap_studies.md  pattern_recognition.md  price_transform.md  statistic_functions.md  volatility_indicators.md  volume_indicators.md
docs/html/: abstract.html  doc_index.html  func.html  funcs.html  index.html  install.html
docs/html/func_groups/: math_operators.html  math_transform.html  momentum_indicators.html  pattern_recognition.html  price_transform.html  statistic_functions.html  volatility_indicators.html  volume_indicators.html
docs/html/stylesheets/: stylesheet.css
examples/: example.py
func_groups/: cycle_indicators.html  math_operators.html  math_transform.html  momentum_indicators.html  overlap_studies.html  pattern_recognition.html  price_transform.html  statistic_functions.html  volatility_indicators.html  volume_indicators.html
ide/msvc/lib_proj/ta_abstract/: ta_abstract.dsp
ide/msvc/lib_proj/ta_func/: ta_func.dsp
ide/msvc/lib_proj/ta_regtest/: ta_regtest.dsp
ide/vs2005/lib_proj/: ta_lib.sln
ide/vs2005/lib_proj/ta_abstract/: ta_abstract.vcproj
ide/vs2005/lib_proj/ta_common/: ta_common.vcproj
ide/xcode/TALib/: main.c  version.plist
ide/xcode/TALib/English.lproj/: InfoPlist.strings
ide/xcode/TALib/TALib.xcodeproj/: project.pbxproj
make/: README.TXT
make/cdd/win32/msvc/gen_code/: Makefile
make/cdd/win32/msvc/ta_func/: Makefile
make/cdr/win32/msvc/gen_code/: Makefile
make/cdr/win32/msvc/ta_func/: Makefile
make/cmd/cygwin/g++/: Makefile
make/cmd/cygwin/g++/ta_libc/: Makefile
make/cmd/freebsd/g++/: Makefile
make/cmd/freebsd/g++/ta_abstract/: Makefile
make/cmd/freebsd/g++/ta_common/: Makefile
make/cmd/freebsd/g++/ta_func/: Makefile
make/cmd/freebsd/g++/ta_regtest/: Makefile
make/cmd/linux/g++/ta_abstract/: Makefile
make/cmd/linux/g++/ta_func/: Makefile
make/cmd/win32/borland/gen_code/: Makefile
make/cmd/win32/borland/ta_abstract/: Makefile
make/cmd/win32/borland/ta_common/: Makefile
make/cmd/win32/borland/ta_regtest/: Makefile
make/cmd/win32/msvc/: Makefile
make/cmd/win32/msvc/ta_func/: Makefile
make/cmd/win32/symantec/ta_common/: Makefile
make/cmd/win32/watcom/ta_abstract/: Makefile
make/cmd/win32/watcom/ta_func/: Makefile
make/cmp/cygwin/g++/: Makefile
make/cmp/cygwin/g++/ta_abstract/: Makefile
make/cmp/cygwin/g++/ta_common/: Makefile
make/cmp/freebsd/g++/: Makefile
make/cmp/freebsd/g++/ta_common/: Makefile
make/cmp/freebsd/g++/ta_func/: Makefile
make/cmp/linux/g++/: Makefile
make/cmp/linux/g++/ta_abstract/: Makefile
make/cmr/cygwin/g++/ta_libc/: Makefile
make/cmr/freebsd/g++/: Makefile
make/cmr/freebsd/g++/gen_code/: Makefile
make/cmr/freebsd/g++/ta_common/: Makefile
make/cmr/freebsd/g++/ta_libc/: Makefile
make/cmr/linux/g++/: Makefile
make/cmr/linux/g++/ta_regtest/: Makefile
make/cmr/win32/borland/: Makefile
make/cmr/win32/borland/ta_abstract/: Makefile
make/cmr/win32/borland/ta_regtest/: Makefile
make/cmr/win32/msvc/ta_func/: Makefile
make/cmr/win32/symantec/: Makefile
make/csd/freebsd/g++/: Makefile
make/csd/linux/g++/: Makefile
make/csd/win32/symantec/: Makefile
make/csp/cygwin/g++/: Makefile
make/csr/cygwin/g++/: Makefile
make/csr/freebsd/g++/: Makefile
make/csr/win32/msvc/: Makefile
make/gen_make/: make_make.pl
make/gen_make/ta_abstract/: ta_abstract.pro
make/gen_make/ta_libc/: make_pro.pl
make/gen_make/template/cygwin-g++/: lib.t
make/gen_make/template/freebsd-g++/: app.t  subdirs.t
make/gen_make/template/unix/: lib.t  subdirs.t
make/gen_make/template/win32/: subdirs.t
make/gen_make/template/win32-msvc/: lib.t  tmake.conf  win32dll.dsp
make/gen_make/template/win32-watcom/: generic.t
src/ta_common/: ta_retcode.csv
src/talib/: __init__.py  _abstract.pxi  _common.pxi  _stream.pxi  _ta_lib.pxd  _ta_lib.pyx  common.pxd
stylesheets/: pygments_style.css  stylesheet.css
talib/: __init__.py  _abstract.pxi  _common.pxi  _func.pxi  _stream.pxi  _ta_lib.c  _ta_lib.pxd  _ta_lib.pyi  _ta_lib.pyx  abstract.c  abstract.py  abstract.pyi  abstract.pyx  abstract_h.pxd  c_ta_lib.pxd  c_ta_lib.pyx  common.c  common.pxd  common.pyx  common_c.c  common_c.pyx  func.c  func.py  func.pyx  lib_unix.pxd  lib_windows.pxd  libc.pxd  libta_lib.pxd  libta_lib.pyx  py.typed  stream.py  stream.pyx  test_abstract.py  test_data.py  test_func.py  test_pandas.py  test_polars.py  test_stream.py  utils.py
talib/tests/: abstract_test.py  data.py  func_test.py
talib/upstream/: config.sub
temp/cdr/ta_abstract/: HOLDER
tests/: abstract_test.py  conftest.py  func_test.py  test_abstract.py  test_data.py  test_func.py  test_pandas.py  test_polars.py  test_stream.py
tools/: build_talib_from_source.bash  build_talib_linux.sh  build_talib_macos.sh  build_talib_windows.cmd  build_wheel_linux.sh  build_wheel_windows.cmd  example.py  generate.py  generate_abstract_stub.py  generate_func.py  generate_stream.py  install-macos.sh  install-ubuntu.sh  install_talib.bat  install_talib_ubuntu.sh  install_talib_windows_src.bat  perf_talib.py  run_tests.py  tafungen.py  threads_talib.py
(+42 files in other folders)
