[metadata]
name = TA-lib-zipline
url = http://github.com/mrjbq7/ta-lib
download_url = https://github.com/mrjbq7/ta-lib/releases
license = BSD
license_files = LICENSE
description = A backtester for trading algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = John Benediktsson
author_email = mrjbq7@gmail.com
classifiers =
    Development Status :: 4 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry",
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: System :: Distributed Computing


[tools:pytest]
;testpaths = tests
addopts = -v


[flake8]
exclude = versioneer.py, setup.py, .git, __pycache__, docs, conda
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401, E231


[options]
python_requires = >=3.7
include_package_data = True
zip_safe = False
packages = find:
package_dir =
    = src
install_requires =
    numpy >=1.14.5, <1.23

[options.packages.find]
where = src

[options.extras_require]
all =
    %(dev)s
    %(test)s

test =
    tox
    flake8 >=3.9.1
    pytest==6.2.5
    pytest-cov >=3.0.0
    pytest-xdist >=2.5.0
    pytest-timeout >=1.4.2
    numpy >=1.14.5, <1.23
    pandas >=1.0
    polars

dev =
    flake8 >=3.9.1
    black
    pre-commit >=2.12.1
